src/main/java/edu/uiowa/jopenmm/AmoebaOpenMMLibrary.java

	/**
	 * Original signature : <code>void OpenMM_AmoebaStretchBendForce_setStretchBendParameters(OpenMM_AmoebaStretchBendForce*, int, int, int, int, double, double, double, double, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param index a int.
	 * @param particle1 a int.
	 * @param particle2 a int.
	 * @param particle3 a int.
	 * @param lengthAB a double.
	 * @param lengthCB a double.
	 * @param angle a double.
	 * @param k1 a double.
	 * @param k2 a double.
	 */
	public static native void OpenMM_AmoebaStretchBendForce_setStretchBendParameters(PointerByReference target, int index, int particle1, int particle2, int particle3, double lengthAB, double lengthCB, double angle, double k1, double k2);
	/**
	 * Original signature : <code>void OpenMM_AmoebaStretchBendForce_updateParametersInContext(OpenMM_AmoebaStretchBendForce*, OpenMM_Context*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param context a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaStretchBendForce_updateParametersInContext(PointerByReference target, PointerByReference context);
	/**
	 * Original signature : <code>void OpenMM_AmoebaStretchBendForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaStretchBendForce*, OpenMM_Boolean)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param periodic a int.
	 */
	public static native void OpenMM_AmoebaStretchBendForce_setUsesPeriodicBoundaryConditions(PointerByReference target, int periodic);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaStretchBendForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaStretchBendForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaStretchBendForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * Original signature : <code>OpenMM_AmoebaVdwForce* OpenMM_AmoebaVdwForce_create()</code>
	 *
	 * @return a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native PointerByReference OpenMM_AmoebaVdwForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_destroy(OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>char* OpenMM_AmoebaVdwForce_Lambda()</code>
	 *
	 * @return a {@link com.sun.jna.Pointer} object.
	 */
	public static native Pointer OpenMM_AmoebaVdwForce_Lambda();
	/**
	 * Original signature : <code>int OpenMM_AmoebaVdwForce_getNumParticles(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaVdwForce_getNumParticles(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setParticleParameters(OpenMM_AmoebaVdwForce*, int, int, double, double, double, OpenMM_Boolean)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param particleIndex a int.
	 * @param parentIndex a int.
	 * @param sigma a double.
	 * @param epsilon a double.
	 * @param reductionFactor a double.
	 * @param isAlchemical a int.
	 */
	public static native void OpenMM_AmoebaVdwForce_setParticleParameters(PointerByReference target, int particleIndex, int parentIndex, double sigma, double epsilon, double reductionFactor, int isAlchemical);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_getParticleParameters(const OpenMM_AmoebaVdwForce*, int, int*, double*, double*, double*, OpenMM_Boolean*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param particleIndex a int.
	 * @param parentIndex a {@link java.nio.IntBuffer} object.
	 * @param sigma a {@link java.nio.DoubleBuffer} object.
	 * @param epsilon a {@link java.nio.DoubleBuffer} object.
	 * @param reductionFactor a {@link java.nio.DoubleBuffer} object.
	 * @param isAlchemical a {@link java.nio.IntBuffer} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_getParticleParameters(PointerByReference target, int particleIndex, IntBuffer parentIndex, DoubleBuffer sigma, DoubleBuffer epsilon, DoubleBuffer reductionFactor, IntBuffer isAlchemical);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_getParticleParameters(const OpenMM_AmoebaVdwForce*, int, int*, double*, double*, double*, OpenMM_Boolean*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param particleIndex a int.
	 * @param parentIndex a {@link com.sun.jna.ptr.IntByReference} object.
	 * @param sigma a {@link com.sun.jna.ptr.DoubleByReference} object.
	 * @param epsilon a {@link com.sun.jna.ptr.DoubleByReference} object.
	 * @param reductionFactor a {@link com.sun.jna.ptr.DoubleByReference} object.
	 * @param isAlchemical a {@link com.sun.jna.ptr.IntByReference} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_getParticleParameters(PointerByReference target, int particleIndex, IntByReference parentIndex, DoubleByReference sigma, DoubleByReference epsilon, DoubleByReference reductionFactor, IntByReference isAlchemical);
	/**
	 * Original signature : <code>int OpenMM_AmoebaVdwForce_addParticle(OpenMM_AmoebaVdwForce*, int, double, double, double, OpenMM_Boolean)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param parentIndex a int.
	 * @param sigma a double.
	 * @param epsilon a double.
	 * @param reductionFactor a double.
	 * @param isAlchemical a int.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaVdwForce_addParticle(PointerByReference target, int parentIndex, double sigma, double epsilon, double reductionFactor, int isAlchemical);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param sigmaCombiningRule a {@link java.lang.String} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(PointerByReference target, String sigmaCombiningRule);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param sigmaCombiningRule a {@link com.sun.jna.Pointer} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(PointerByReference target, Pointer sigmaCombiningRule);
	/**
	 * Original signature : <code>char* OpenMM_AmoebaVdwForce_getSigmaCombiningRule(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a {@link com.sun.jna.Pointer} object.
	 */
	public static native Pointer OpenMM_AmoebaVdwForce_getSigmaCombiningRule(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param epsilonCombiningRule a {@link java.lang.String} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(PointerByReference target, String epsilonCombiningRule);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param epsilonCombiningRule a {@link com.sun.jna.Pointer} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(PointerByReference target, Pointer epsilonCombiningRule);
	/**
	 * Original signature : <code>char* OpenMM_AmoebaVdwForce_getEpsilonCombiningRule(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a {@link com.sun.jna.Pointer} object.
	 */
	public static native Pointer OpenMM_AmoebaVdwForce_getEpsilonCombiningRule(PointerByReference target);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaVdwForce_getUseDispersionCorrection(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaVdwForce_getUseDispersionCorrection(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setUseDispersionCorrection(OpenMM_AmoebaVdwForce*, OpenMM_Boolean)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param useCorrection a int.
	 */
	public static native void OpenMM_AmoebaVdwForce_setUseDispersionCorrection(PointerByReference target, int useCorrection);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setParticleExclusions(OpenMM_AmoebaVdwForce*, int, const OpenMM_IntArray*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param particleIndex a int.
	 * @param exclusions a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_setParticleExclusions(PointerByReference target, int particleIndex, PointerByReference exclusions);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_getParticleExclusions(const OpenMM_AmoebaVdwForce*, int, OpenMM_IntArray*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param particleIndex a int.
	 * @param exclusions a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_getParticleExclusions(PointerByReference target, int particleIndex, PointerByReference exclusions);
	/**
	 * Original signature : <code>double OpenMM_AmoebaVdwForce_getCutoffDistance(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaVdwForce_getCutoffDistance(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setCutoffDistance(OpenMM_AmoebaVdwForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param distance a double.
	 */
	public static native void OpenMM_AmoebaVdwForce_setCutoffDistance(PointerByReference target, double distance);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setCutoff(OpenMM_AmoebaVdwForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param cutoff a double.
	 */
	public static native void OpenMM_AmoebaVdwForce_setCutoff(PointerByReference target, double cutoff);
	/**
	 * Original signature : <code>double OpenMM_AmoebaVdwForce_getCutoff(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaVdwForce_getCutoff(PointerByReference target);
	/**
	 * Original signature : <code>OpenMM_AmoebaVdwForce_NonbondedMethod OpenMM_AmoebaVdwForce_getNonbondedMethod(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaVdwForce_getNonbondedMethod(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setNonbondedMethod(OpenMM_AmoebaVdwForce*, OpenMM_AmoebaVdwForce_NonbondedMethod)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param method a int.
	 */
	public static native void OpenMM_AmoebaVdwForce_setNonbondedMethod(PointerByReference target, int method);
